<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:id="@+id/background_id"
	android:background="@drawable/bg">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="50.0dip"
		android:layout_centerHorizontal="true"
		>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			>
			<ImageView android:id="@+id/iv_icon" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" 
				android:src="@drawable/icon"
				android:layout_marginTop="10dip" />
			<TextView android:id="@+id/tv_name" 
				android:layout_width="fill_parent"
				android:gravity="center_horizontal" 
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" 
				android:layout_below="@id/iv_icon"
				android:text="@string/str_about_name"
				android:textColor="@color/white"
				android:textSize="14sp"
			
				 />
			 <TextView android:id="@+id/tv_version" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" 
				android:layout_below="@id/tv_name"
				android:text="@string/str_about_version" 
				android:textSize="14sp"
				android:textColor="@color/white"
				/> 

			<TextView android:id="@+id/tv_describe"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_version"
				android:layout_centerHorizontal="true" 
				android:layout_marginTop="@dimen/margin_dealer_item"
				android:gravity="left" 
				android:layout_marginLeft="@dimen/margin_dealer_item"
				android:layout_marginRight="@dimen/margin_dealer_item" 
				android:layout_marginBottom="10.0dip"
				android:textSize="14sp"
				android:autoLink="email|web"
				android:textColor="@color/white" 
				/>
				

			<TextView android:id="@+id/tv_company" 
			   android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" 
				android:layout_below="@id/tv_describe"
				android:text="@string/str_company" 
				android:textSize="14sp"
				android:textColor="@color/white"
				/>

			<TextView android:id="@+id/tv_copyright"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_below="@id/tv_company"
				android:text="@string/str_copyright" 
				android:textSize="14sp"
				android:textColor="@color/white"
				
				/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
