<?xml version="1.0" encoding="utf-8"?>
<!--
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<com.weichuang.china.music.commonwidgets.BottomTabWidget xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottombuttonbar"
	android:layout_weight="0" android:background="@drawable/tw_bg"
	android:orientation="horizontal"
	android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="70px" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/songtab"
	    android:layout_width="0dip"
	    android:layout_height="70px"
	    android:layout_weight="1"
	    android:gravity="center_vertical">
	    <RelativeLayout android:layout_width="88px"
	    	android:layout_height="64px"
	    	android:orientation="vertical"
	    	android:layout_centerHorizontal="true"
	    	android:background="@drawable/tab_indicator_1">
		    <ImageView android:id="@+id/icon"
		    	android:background="@drawable/bottom_tab_songs"
		        android:layout_width="36px"
		        android:layout_height="36px"
		        android:layout_centerHorizontal="true" />
		    <TextView android:id="@+id/title"
		    	android:text="@string/tracks_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/icon"
		        android:layout_centerHorizontal="true"
		        style="?android:attr/tabWidgetStyle" />
	    </RelativeLayout>
	</RelativeLayout>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/artisttab"
	    android:layout_width="0dip"
	    android:layout_height="70px"
	    android:layout_weight="1"
	    android:gravity="center_vertical">
	    <RelativeLayout android:layout_width="88px"
	    	android:layout_centerHorizontal="true"
	    	android:layout_height="64px" android:orientation="vertical"
	    	android:background="@drawable/tab_indicator_1">
		    <ImageView android:id="@+id/icon"
		    	android:background="@drawable/bottom_tab_artists"
		        android:layout_width="36px"
		        android:layout_height="36px"
		        android:layout_centerHorizontal="true" />
		    <TextView android:id="@+id/title"
		    	android:text="@string/artists_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/icon"
		        android:layout_centerHorizontal="true"
		        style="?android:attr/tabWidgetStyle" />
	    </RelativeLayout>
	</RelativeLayout>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/albumtab"
	    android:layout_width="0dip"
	    android:layout_height="70px"
	    android:layout_weight="1"
	    android:gravity="center_vertical">
	    <RelativeLayout android:layout_width="88px"
	    	android:layout_height="64px" android:orientation="vertical"
	    	android:layout_centerHorizontal="true"
	    	android:background="@drawable/tab_indicator_1">
		    <ImageView android:id="@+id/icon"
		    	android:background="@drawable/bottom_tab_albums"
		        android:layout_width="36px"
		        android:layout_height="36px"
		        android:layout_centerHorizontal="true" />
		    <TextView android:id="@+id/title"
		    	android:text="@string/albums_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/icon"
		        android:layout_centerHorizontal="true"
		        style="?android:attr/tabWidgetStyle" />
	    </RelativeLayout>
	</RelativeLayout>

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/playlisttab"
	    android:layout_width="0dip"
	    android:layout_height="70px"
	    android:layout_weight="1"
	    android:gravity="center_vertical">
	    <RelativeLayout android:layout_width="88px"
	    	android:layout_height="64px" android:orientation="vertical"
	    	android:layout_centerHorizontal="true"
	    	android:background="@drawable/tab_indicator_1"> 
		    <ImageView android:id="@+id/icon"
		    	android:background="@drawable/bottom_tab_myfavourite"
		        android:layout_width="36px"
		        android:layout_height="36px"
		        android:layout_centerHorizontal="true" />
		    <TextView android:id="@+id/title"
		    	android:text="@string/playlists_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/icon"
		        android:layout_centerHorizontal="true"
		        style="?android:attr/tabWidgetStyle" />
	    </RelativeLayout>
	</RelativeLayout>
<!-- 	
	<include android:id="@+id/artisttab" layout="@layout/tab_indicator_1"  />
	<include android:id="@+id/albumtab" layout="@layout/tab_indicator_1"  />
	<include android:id="@+id/songtab" layout="@layout/tab_indicator_1" />
	<include android:id="@+id/playlisttab" layout="@layout/tab_indicator_1" />
-->
</com.weichuang.china.music.commonwidgets.BottomTabWidget>

